fixed #99 A WMS Layer dummy (disabled layer) without style leads to an exception, when it should be saved to a configuration file.